# my-platform

./: .gitignore  Cargo.toml  README.md  Secrets.txt  Shuttle.toml
.github/workflows/: rust.yml
front-end/: app.js  index.html  login.html  loginS.js  posts.json  style.css
src/: main.rs  routes.rs
src/cors/: cors.rs
src/front-end/: app.js  index.html  login.html  loginS.js  package-lock.json  package.json  style.css  tailwind.config.js  tsconfig.json  vite.config.ts
src/front-end/src/: App.vue  main.ts  router.ts  store.ts
src/front-end/src/pages/: Home.vue  HomeView.vue  NotFound.vue  Project.vue  Projects.vue
src/routes/: admin.rs  posts.rs  projects.rs
src/utils/: jwt.rs
